--- a/poke-store/src/components/Container/style.css
+++ b/poke-store/src/components/Container/style.css
@@ -1,37 +1,37 @@
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+.pagination{
+  width:100%;
+  list-style: none;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+.pagination li {
+  background: #ffffff;
+  background: -moz-linear-gradient(top, #ffffff 0%, #f1f1f1 50%, #e1e1e1 51%, #f6f6f6 100%);
+  background: -webkit-linear-gradient(top, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
+  background: linear-gradient(to bottom, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0 );
+  border:1px solid #f3f3f3;
+  border-radius:5px;
+  -webkit-box-shadow: 0px 0px 5px -3px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px -3px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px -3px rgba(0,0,0,0.75);
+  margin:5px;
+  width:3%;
+  height:3%;
+  padding:8px 5px;
+  font-size:14px;
+  cursor:pointer;
 }
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+.pagination li:hover{
+  background: #f6f6f6;
+  background: -moz-linear-gradient(top, #f6f6f6 0%, #f1f1f1 50%, #f6f6f6 52%, #e1e1e1 100%);
+  background: -webkit-linear-gradient(top, #f6f6f6 0%,#f1f1f1 50%,#f6f6f6 52%,#e1e1e1 100%);
+  background: linear-gradient(to bottom, #f6f6f6 0%,#f1f1f1 50%,#f6f6f6 52%,#e1e1e1 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0 );
 }
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-.fadeIn{
-  -webkit-animation: fadein 2s;
-  -moz-animation: fadein 2s;
-  -ms-animation: fadein 2s;
-  -o-animation: fadein 2s;
-  animation: fadein 2s;
-  
+.pagination .active{
+  border:1px solid #333;
 }
