--- a/poke-store/src/styles/Catalogo.css
+++ b/poke-store/src/styles/Catalogo.css
@@ -15,3 +15,49 @@ html, body {
 input:focus, textarea:focus, select:focus, button:focus{
   outline: none;
 }
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.fadeIn{
+  -webkit-animation: fadein 2s;
+  -moz-animation: fadein 2s;
+  -ms-animation: fadein 2s;
+  -o-animation: fadein 2s;
+  animation: fadein 2s;
+  
+}
+.fadeIn2{
+  -webkit-animation: fadein 0.6s;
+  -moz-animation: fadein 0.6s;
+  -ms-animation: fadein 0.6s;
+  -o-animation: fadein 0.6s;
+  animation: fadein 0.6s;
+  
+}
