--- a/poke-store/src/components/Container/style.css
+++ b/poke-store/src/components/Container/style.css
@@ -1,3 +1,9 @@
+.lengthPage{
+  font-size:15px;
+  font-family:'Karla', sans-serif;
+  opacity:0.6;
+  margin:10px 0px;
+}
 .pagination{
   width:100%;
   list-style: none;
@@ -9,10 +15,7 @@
 
 .pagination li {
   background: #ffffff;
-  background: -moz-linear-gradient(top, #ffffff 0%, #f1f1f1 50%, #e1e1e1 51%, #f6f6f6 100%);
-  background: -webkit-linear-gradient(top, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
-  background: linear-gradient(to bottom, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0 );
+
   border:1px solid #f3f3f3;
   border-radius:5px;
   -webkit-box-shadow: 0px 0px 5px -3px rgba(0,0,0,0.75);
@@ -27,11 +30,46 @@
 }
 .pagination li:hover{
   background: #f6f6f6;
-  background: -moz-linear-gradient(top, #f6f6f6 0%, #f1f1f1 50%, #f6f6f6 52%, #e1e1e1 100%);
-  background: -webkit-linear-gradient(top, #f6f6f6 0%,#f1f1f1 50%,#f6f6f6 52%,#e1e1e1 100%);
-  background: linear-gradient(to bottom, #f6f6f6 0%,#f1f1f1 50%,#f6f6f6 52%,#e1e1e1 100%);
+  background: -moz-linear-gradient(top, #ffffff 0%, #f1f1f1 50%, #e1e1e1 51%, #f6f6f6 100%);
+  background: -webkit-linear-gradient(top, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
+  background: linear-gradient(to bottom, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0 );
 }
 .pagination .active{
-  border:1px solid #333;
+  border:1px solid #666;
+  background:#FFF;
+  background: -moz-linear-gradient(top, #ffffff 0%, #f1f1f1 50%, #e1e1e1 51%, #f6f6f6 100%);
+  background: -webkit-linear-gradient(top, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
+  background: linear-gradient(to bottom, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0 );
+}
+.pagination .disabled {
+  opacity: 0.2;
+  cursor:not-allowed;
+}
+.scrollTop {
+  position: fixed; 
+  width: 100%;
+  bottom: 20px;
+  align-items: center;
+  height: 20px;
+  justify-content: center;
+  z-index: 1000;
+  cursor: pointer;
+  animation: fadeIn 0.3s;
+  transition: opacity 0.4s;
+  opacity: 0.5;
+}
+
+.scrollTop:hover{
+  opacity: 1;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.5;
+  }
 }
