--- a/poke-store/src/components/ShoppingCart/style.css
+++ b/poke-store/src/components/ShoppingCart/style.css
@@ -63,3 +63,11 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+
+  @media(max-width: 890px) {
+    .cart-content {
+      width: 70%; 
+    }
+ 
+  }
